# PHARE

./: .clang-format  .coderabbit.yaml  .gdbinit  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  IRT_CODE_REVIEW_REPORT.md  ISSUES.TXT  PR_1047_REVIEW.md  RELEASE.md  TODO  compile_command.json  lgtm.yml  mkn.cuda.sh  mkn.rocm.sh  mkn.yaml  notes  readme.md  requirements.txt  run.sh  sanitizer.cmake  third_party_license.md  verify_ghost_integration.py
doc/: Doxyfile.in  (+12 more)
src/amr/: CMakeLists.txt  amr_constants.h  amr_constants.hpp  debugod.cpp  debugod.hpp  messenger_registration.h  messenger_registration.hpp  multiphysics_integrator.h  multiphysics_integrator.hpp  samrai.cpp  samrai.hpp
src/amr/diagnostic/: samrai_diagnostic.h
src/amr/level_initializer/: hybrid_level_initializer.h  hybrid_level_initializer.hpp  level_initializer.h  level_initializer.hpp  level_initializer_factory.hpp  mhd_level_initializer.hpp
src/amr/load_balancing/: concrete_load_balancer_hybrid_strategy_homogeneous.hpp  concrete_load_balancer_hybrid_strategy_nppc.hpp  concrete_load_balancer_strategy_homogeneous.hpp  concrete_load_balancer_strategy_nppc.hpp  load_balancer_details.hpp  load_balancer_estimator.hpp  load_balancer_estimator_factory.hpp  load_balancer_estimator_hybrid.hpp  load_balancer_estimator_mhd.hpp  load_balancer_hybrid_strategy.hpp  load_balancer_hybrid_strategy_factory.hpp  load_balancer_manager.hpp  load_balancer_strategy.hpp
src/amr/messengers/: GhostBoxGeometryVariableFillPattern.cpp  GhostBoxGeometryVariableFillPattern.h  communicator.hpp  communicators.h  communicators.hpp  component_variable_field_paterns.hpp  field_operate_transaction.hpp  field_sum_transaction.hpp  ghost_only_variable_fill_pattern.cpp  ghost_only_variable_fill_pattern.h  hybrid_hybrid_messenger_strategy.h  hybrid_hybrid_messenger_strategy.hpp  hybrid_messenger.h  hybrid_messenger.hpp  hybrid_messenger_info.h  hybrid_messenger_info.hpp  hybrid_messenger_strategy.h  hybrid_messenger_strategy.hpp  messenger.cpp  messenger.h  messenger.hpp  messenger_factory.cpp  messenger_factory.h  messenger_factory.hpp  messenger_info.hpp  mhd_hybrid_messenger_strategy.h  mhd_hybrid_messenger_strategy.hpp  mhd_messenger.h  mhd_messenger.hpp  mhd_messenger_info.h  mhd_messenger_info.hpp  quantity_communicator.h  quantity_communicator.hpp  refiner.hpp  refiner_pool.hpp  scheduler.hpp  synchronizer.hpp  synchronizer_pool.hpp
src/amr/physical_models/: hybrid_model.h  hybrid_model.hpp  mhd_model.h  mhd_model.hpp  physical_model.h  physical_model.hpp  pic_model.hpp
src/amr/resources_manager/: amr_utils.cpp  amr_utils.h  amr_utils.hpp  field_resource.h  field_resource.hpp  particle_resource.h  particle_resource.hpp  resources_guards.h  resources_guards.hpp  resources_manager.h  resources_manager.hpp  (+3 more)
src/core/: CMakeLists.txt  ThreadPool.h  debug.cpp  debug.hpp  def.h  def.hpp  env.hpp  errors.h  errors.hpp  logger.cpp  logger.h  logger.hpp  operators.h  operators.hpp  thread_pool.h  thread_queue.h  vector.hpp
src/diagnostic/: CMakeLists.txt  diagnostic_dao.h  diagnostic_manager.cpp  diagnostic_manager.h  diagnostic_manager.hpp  diagnostic_model_view.h  diagnostic_model_view.hpp  diagnostic_props.h  diagnostic_props.hpp  diagnostic_writer.h  diagnostic_writer.hpp  diagnosticmanager.h  diagnostics.h  diagnostics.hpp
src/initializer/: CMakeLists.txt  __init__.py.in  data_provider.cpp  data_provider.h  data_provider.hpp  dict_utils.hpp  dictator.cpp  init.py  pragma_disable.h  pragma_disable.hpp  pyphare.cpp  python_data_provider.cpp  python_data_provider.h  python_data_provider.hpp  restart_data_provider.h  restart_data_provider.hpp
src/phare/: CMakeLists.txt  __init__.py  include.h  init.py  job.eg.py  job.py  phare.cpp  phare.h  phare.hpp  phare_init.py  phare_init_small.py  setpythonpath.py.in  toto.py
src/pyphare/: CMakeLists.txt  add.h  diagnostic.h  init.py  phare.py  pyphare.cpp
src/python3/: CMakeLists.txt  MHDResolver.hpp  cpp_etc.cpp  cpp_ext.cpp  cpp_mhd_parameters.hpp  cpp_mhd_python_registerer.hpp  cpp_simulator.cpp  cpp_simulator.h  cpp_simulator.hpp  data_wrangler.cpp  data_wrangler.h  data_wrangler.hpp  mhd_resolver.hpp  particles.h  particles.hpp  patch_data.h  patch_data.hpp  patch_level.h  patch_level.hpp  pyMHD.cpp  pybind_def.h  pybind_def.hpp
src/restarts/: CMakeLists.txt  restarts.hpp  restarts_manager.hpp  restarts_model_view.hpp  restarts_props.hpp
src/simulator/: .simulator.hpp.swp  CMakeLists.txt  default_mhd_time_stepper.hpp  include.h  include.hpp  phare_types.h  phare_types.hpp  simulator.cpp  simulator.h  simulator.hpp
src/solver/: CMakeLists.txt  messenger_registration.h  multiphysics_integrator.h
tests/diagnostic/: CMakeLists.txt  __init__.py  defs.h  defs.hpp  func.h  hierarchy.h  hierarchy.hpp  include.h  include.hpp  input_config.h  integrator.h  job.py.in  job_1d.py  job_1d.py.in  job_2d.py  job_2d.py.in  job_3d.py.in  samrai_lifecycle.h  tag_strat.h  tag_strat.hpp  test-diagnostics_1d.cpp  test-diagnostics_2d.cpp  test-diagnostics_3d.cpp  test_diagnostics.cpp  test_diagnostics.h  test_diagnostics.hpp  test_diagnostics.ipp  test_main.cpp
tests/initializer/: CMakeLists.txt  init.py  init_functions.h  init_functions.hpp  job.py  setpythonpath.py.in  test_initializer.cpp
tests/simulator/: CMakeLists.txt  __init__.py  config.py  data_wrangler.py  diagnostics.py  per_test.h  per_test.hpp  pybind.cpp  refined_particle_nbr.py  refinement_boxes.py  test_advance.py  test_data_wrangler.py  test_diagnostic_timestamps.py  test_diagnostics.py  test_exceptions.py  test_init_from_restart.py  test_init_ghostparticles.py  test_init_periodicity.py  test_initialization.py  test_kirov.py  test_load_balancing.py  test_offloading.py  test_periodicity.py  test_pusher.py  test_python_concurrent.py  test_restarts.py  test_run.py  test_samrai_restarts_parser.py  test_simulation.py  test_tagging.py  test_tagging.py.off  test_time_step.py  test_validation.py  test_vtk_diagnostics.py  test_weak_perturbation.py
tools/config/: .gitignore  CMakeLists.txt  README.md  cmake.sh  config.py  main.cpp
(+2893 files in other folders)
