cmake_minimum_required (VERSION 3.20.1)
project(phare_core)

set( SOURCES_INC
     data/electromag/electromag.hpp
     data/field/field.hpp
     data/field/field_traits.hpp
     data/grid/gridlayoutdefs.hpp
     data/grid/gridlayout.hpp
     data/grid/gridlayout_traits.hpp
     data/grid/gridlayout_impl.hpp
     data/grid/gridlayoutimplyee.hpp
     data/ndarray/ndarray_vector.hpp
     data/patch_field_accessor.hpp
     data/particles/particle.hpp
     data/particles/particle_utilities.hpp
     data/particles/particle_array.hpp
     data/ions/ion_population/particle_pack.hpp
     data/ions/ion_population/ion_population.hpp
     data/ions/ions.hpp
     data/electrons/electrons.hpp
     data/ions/particle_initializers/particle_initializer.hpp
     data/ions/particle_initializers/maxwellian_particle_initializer.hpp
     data/ions/particle_initializers/particle_initializer_factory.hpp
     data/tensorfield/tensorfield.hpp
     data/tensorfield/tensorfield_traits.hpp
     data/vecfield/vecfield.hpp
     data/vecfield/vecfield_component.hpp
     data/vecfield/vecfield_initializer.hpp
     data/vecfield/vecfield_traits.hpp
     hybrid/hybrid_quantities.hpp
     boundary/boundary.hpp
     boundary/boundary_defs.hpp
     boundary/boundary_factory.hpp
     boundary/boundary_manager.hpp
     numerics/boundary_condition/boundary_condition.hpp
     numerics/boundary_condition/boundary_condition_context.hpp
     numerics/boundary_condition/field_boundary_condition.hpp
     numerics/boundary_condition/field_boundary_condition_factory.hpp
     numerics/boundary_condition/field_none_boundary_condition.hpp
     numerics/boundary_condition/field_neumann_boundary_condition.hpp
     numerics/boundary_condition/field_dirichlet_boundary_condition.hpp
     numerics/boundary_condition/field_symmetric_boundary_condition.hpp
     numerics/boundary_condition/field_antisymmetric_boundary_condition.hpp
     numerics/boundary_condition/field_divergence_free_transverse_neumann_boundary_condition.hpp
     numerics/boundary_condition/field_total_energy_from_pressure_boundary_condition.hpp
     numerics/boundary_condition/field_adaptive_outflow_pressure_boundary_condition.hpp
     numerics/interpolator/interpolator.hpp
     numerics/pusher/boris.hpp
     numerics/pusher/pusher.hpp
     numerics/pusher/pusher_factory.hpp
     numerics/ampere/ampere.hpp
     numerics/faraday/faraday.hpp
     numerics/ohm/ohm.hpp
     numerics/moments/moments.hpp
     numerics/ion_updater/ion_updater.hpp
     numerics/thermo/thermo.hpp
     numerics/thermo/thermo_defs.hpp
     numerics/thermo/thermo_factory.hpp
     numerics/thermo/ideal_gas_thermo.hpp
     numerics/primite_conservative_converter/conversion_utils.hpp
     models/physical_state.hpp
     models/hybrid_state.hpp
     models/mhd_state.hpp
     utilities/box/box.hpp
     utilities/algorithm.hpp
     utilities/constants.hpp
     utilities/index/index.hpp
     utilities/meta/meta_utilities.hpp
     utilities/partitionner/partitionner.hpp
     utilities/point/point.hpp
     utilities/range/range.hpp
     utilities/types.hpp
     utilities/mpi_utils.hpp
   )

set( SOURCES_CPP
     data/ions/particle_initializers/maxwellian_particle_initializer.cpp
     utilities/index/index.cpp
     utilities/mpi_utils.cpp
    )

set( CORE_EXTRA_SOURCES_CPP )
if (withPhlop)
  set( CORE_EXTRA_SOURCES_CPP ${PHARE_PROJECT_DIR}/subprojects/phlop/src/phlop/timing/scope_timer.cpp )
endif(withPhlop)

add_library(${PROJECT_NAME}  ${SOURCES_INC} ${SOURCES_CPP} ${CORE_EXTRA_SOURCES_CPP} )
target_compile_options(${PROJECT_NAME}  PRIVATE ${PHARE_WERROR_FLAGS})
target_link_libraries(${PROJECT_NAME}  PRIVATE phare_initializer MPI::MPI_C cppdict
    PUBLIC ${PHARE_BASE_LIBS}
  )

# skip mpicxx in compile command if not configured with configurator
if (NOT phare_configurator)
     target_compile_definitions(${PROJECT_NAME} PUBLIC MPICH_SKIP_MPICXX OMPI_SKIP_MPICXX )
endif()

set_property(TARGET ${PROJECT_NAME} PROPERTY INTERPROCEDURAL_OPTIMIZATION ${PHARE_INTERPROCEDURAL_OPTIMIZATION})
set_property(TARGET ${PROJECT_NAME} APPEND_STRING PROPERTY LINK_FLAGS " ${PHARE_LINK_FLAGS}")
